--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,24 +11,26 @@
 </head>
 <body>
 	<div class="container">
-		<h2>Registration</h2>
-		<form action="" method="post">
-			<div class="form-group">
-				<label for="name">Name:</label> 
-				<input type="text" class="form-control" id="name">
-			</div>
-			
-			<div class="form-group">
-				<label for="password">Password:</label>
-				<input type="password" class="form-control" id="password">
-			</div>
-			
-			<div class="form-group">
-				<label for="username">User Name:</label>
-				<input type="text" class="form-control" id="username">
-			</div>
-			<button type="submit" class="btn btn-default">Submit</button>
-		</form>
+		<div class="col-md-4">
+			<h2>Registration</h2>
+			<form action="" method="post">
+				<div class="form-group">
+					<label for="name">Name:</label> 
+					<input type="text" class="form-control" id="name">
+				</div>
+				
+				<div class="form-group">
+					<label for="password">Password:</label>
+					<input type="password" class="form-control" id="password">
+				</div>
+				
+				<div class="form-group">
+					<label for="username">User Name:</label>
+					<input type="text" class="form-control" id="username">
+				</div>
+				<button type="submit" class="btn btn-success">Submit</button>
+			</form>
+		</div>
 	</div>
 </body>
 </html>
