--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,8 @@
 				<div class="col-lg-offset-3 col-lg-6">
 					<div class="thumbnail">
 						<a th:href="'/postimg/' + ${postText.postImgs[0].hashedFilename}" target="_blank">
-							<img th:src="'/postimg/' + ${postText.postImgs[0].cpFileName != null} ? ${postText.postImgs[0].cpFileName} : ${postText.postImgs[0].hashedFilename}" th:alt="${postText.content}" >
+							<img th:if="${postText.postImgs[0].cpFileName != null}" th:src="'/postimg/' + ${postText.postImgs[0].cpFileName}" th:alt="${postText.content}" >
+							<img th:unless="${postText.postImgs[0].cpFileName != null}" th:src="'/postimg/' + ${postText.postImgs[0].hashedFilename}" th:alt="${postText.content}" >
 							<div class="caption">
 								<p th:text="${postText.content} + '---' + ${postText.date}"></p>
 							</div>
